# armchair_analysis

./: MANIFEST.in  README.md  README.rst  setup.cfg
src/armchair_analysis/: __init__.py  game_data.py
test/: test_data.py
